--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Alunhadas </title>
+    <title>Alunhadas</title>
+    <meta name="title" content="Alunhadas" />
+    <meta name="description" content="Encontra todos los insumos necesarios para convertirte en una gran manicurista." />
   </head>
   <body>
     <div id="root"></div>
